deps/v8/test/message/syntactic-tail-call-sloppy.out
*%(basename)s:8: SyntaxError: Tail call expressions are not allowed in non-strict mode
  return  continue  f()  ;
          ^^^^^^^^^^^^^
SyntaxError: Tail call expressions are not allowed in non-strict mode
